--- a/src/Feed.css
+++ b/src/Feed.css
@@ -1,8 +1,9 @@
 .feed{
     flex:0.5;
-    border: 1px solid var(--twitter-background);
+    border: 0.5px solid var(--twitter-background);
     /* min-width: fit-content; */
     overflow-y: scroll;
+    margin-top: 20px;
 
 }
 
@@ -18,6 +19,6 @@
     top: 0;
     background-color: white;
     z-index: 99;
-    border: 1px solid var(--twitter-background);
+    border-bottom: 0.5px solid var(--twitter-background);
     padding: 15px 20px;
 }
