--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar{
-    border: 1px solid var(--twitter-background);
-    flex: 0.3;
+    /* border: 1px solid var(--twitter-background); */
+    flex: 0.25;
     /* min-width: 250px; */
     margin-top: 20px;
     padding-left: 20px;
