--- a/src/TweetBox.css
+++ b/src/TweetBox.css
@@ -36,5 +36,5 @@
     width: 80px !important;
     height: 40px !important;
     margin-top: 20px !important;
-    /* margin-left: auto !important; */
+    margin-left: 10px !important;
 }
